# DLMM-auto-sell-assets-into-staking-contract

./: Anchor.toml  Cargo.toml  README.md  debug-toolchain.sh  package-lock.json  package.json  sync.sh  tsconfig.json  upgrade-solana.sh
crank/: .env.example  Dockerfile  README.md  brain-staking-crank.service  docker-compose.yml  ecosystem.config.js  heartbeat.txt  logrotate.conf  package-lock.json  package.json  tsconfig.json
docs/: DEPLOYMENT-RUNBOOK.md
programs/brain-staking/: Cargo.toml
programs/brain-staking/src/: constants.rs  errors.rs  fuzz_tests.rs  helpers.rs  lib.rs
programs/brain-staking/src/instructions/: accept_ownership.rs  cast_vote.rs  claim.rs  close_dlmm_exit.rs  close_proposal.rs  close_vote_record.rs  complete_exit.rs  create_proposal.rs  deposit_rewards.rs  emergency_halt.rs  emergency_rescue.rs  governance_initiate_exit.rs  initialize.rs  initialize_governance.rs  initiate_exit.rs  mod.rs  realloc_dlmm_exit.rs  realloc_governance_config.rs  realloc_proposal.rs  realloc_staking_pool.rs  record_claim.rs  renounce_ownership.rs  resume.rs  set_auto_execute.rs  set_quorum.rs  stake.rs  terminate_exit.rs  transfer_ownership.rs  unstake.rs  update_crank.rs  update_pool_config.rs  update_pool_config_by_governance.rs  update_treasury.rs  update_treasury_by_governance.rs
programs/brain-staking/src/state/: dlmm_exit.rs  governance_config.rs  mod.rs  proposal.rs  staker_account.rs  staking_pool.rs  vote_record.rs
scripts/: deploy-crank.sh  deploy.sh  heartbeat-test.sh  mainnet-integration-test.ts  sync-and-build.sh  sync-and-test-verbose.sh  (+4 more)
(+39 files in other folders)
