[package]
name = "brain-staking"
version = "0.1.0"
description = "BRAIN token staking program with SOL rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brain_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

[dev-dependencies]
proptest = "1"

[profile.release]
overflow-checks = true
lto = true
opt-level = "s"
codegen-units = 1
